[package]
name = "nft-loans-non-custodial"
version = "0.9.0"
authors = ["Nicolas KOWALSKI <kowalski.kowalskin@gmail.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
# CosmWasm
cw2 = "1.1.2"
cw721 = "0.18.0"
sg721 = "3.3.0"
sg-std = "3.2.0"
cw721-base = "0.18.0"
cosmwasm-schema = { version = "1.5.0" }
cw-storage-plus = "1.2.0"
cosmwasm-std = { version = "1.5.0" }

# Other Modules
schemars = "0.8.16"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.51" }

# Local Modules
nft-loans-export = { path = "../../packages/nft-loans", version = "0.1.0" }
utils = { path = "../../packages/utils", version = "0.1.0" }
fee-distributor-export = { path = "../../packages/fee_distributor", version = "0.1.0" }
fee-contract-export = { path = "../../packages/fee_contract", version = "0.1.0" }


[dev-dependencies]
cosmwasm-schema = { version = "1.5.0" }

[profile.release]
overflow-checks = true