[package]
name = "raffles"
version = "0.1.0"
authors = ["Nicolas KOWALSKI <kowalski.kowalskin@gmail.com>"]
edition = "2018"
description = "Raffle contract for people to auction their NFTs in a funny way"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
# CosmWasm
cw2 = "0.13.0"
cw20 = "0.13.0"
cw721 = "0.13.0"
cw1155 = "0.13.0"
cw-storage-plus = "0.13.0"
cosmwasm-schema = { version = "1.1.0" }
cosmwasm-std = { version = "1.1.0" }

# Other Modules
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
anyhow = "1.0"
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version =  "0.5.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }

# Local Modules
raffles-export = { path = "../../packages/raffles", version = "0.1.0" }
utils = { path = "../../packages/utils", version = "0.1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
getrandom = { version="^0.2", features = ["js"] }
rustc-serialize = "0.3.24"
hex = "0.4.3"

[profile.release]
overflow-checks = true
