[package]
name = "randomness-verifier"
version = "0.10.0"
authors = ["Nicolas KOWALSKI <kowalski.kowalskin@gmail.com>"]
edition = "2018"
description = "Verify contract for drand randomness"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
#CosmWasm
cosmwasm-std = { version = "1.1.0" }
cosmwasm-schema = { version = "1.1.0" }

#Other Modules
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
drand-verify = "0.6.2"

# Local Modules
raffles-export = { path = "../../packages/raffles", version = "0.1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
rustc-serialize = "0.3.24"

[profile.release]
overflow-checks = true